--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,1 +1,101 @@
-<!doctype html><html><head> <meta charset="utf-8"> <meta name="keywords" content=""> <meta name="description" content=""> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="shortcut icon" type="image/png" href="favicon.png"> <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"><link rel="stylesheet" type="text/css" href="style.css"><link rel="stylesheet" type="text/css" href="./css/animate.min.css"><link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css"><link rel="stylesheet" type="text/css" href="./css/feather.min.css"><link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'><link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'> <script src="./js/jquery-2.1.0.min.js"></script><script src="./js/bootstrap.min.js"></script><script src="./js/blocs.min.js"></script><script src="./js/jqBootstrapValidation.js"></script><script src="./js/formHandler.js"></script><script src="./js/lazysizes.min.js" defer></script> <title>Contact-Us</title> <!-- Google Analytics --> <!-- Google Analytics END --> </head><body><!-- Main container --><div class="page-container"> <!-- bloc-0 --><div class="bloc l-bloc bgc-dark-jungle-green" id="bloc-0"><div class="container bloc-sm"><nav class="navbar row"><div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way.</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div><div class="collapse navbar-collapse navbar-1"><ul class="site-navigation nav navbar-nav"><li><a href="index.html">Home</a></li><li><a href="listings.html">Show Listings</a></li><li><a href="needs.html">I Have a Need</a></li><li><a href="log-out.html">Log Out</a></li></ul></div></nav></div></div><!-- bloc-0 END --><!-- Bloc Group --><div class='bloc-group'><!-- bloc-12 --><div class="bloc bgc-dark-jungle-green bloc-tile-4 d-bloc" id="bloc-12"><div class="container bloc-lg"><div class="row"><div class="col-sm-12"></div></div></div></div><!-- bloc-12 END --><!-- bloc-13 --><div class="bloc bgc-dark-jungle-green bloc-tile-2 d-bloc" id="bloc-13"><div class="container bloc-lg"><div class="row"><div class="col-sm-12"><form id="form_4" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"><div class="form-group"><label>Name</label><input id="name4" class="form-control" required /></div><div class="form-group"><label>Email</label><input id="email4" class="form-control" type="email" required /></div><div class="form-group"><label>Message</label><textarea id="message4" class="form-control" rows="4" cols="50" required></textarea></div> <button class="bloc-button btn btn-lg pull-right btn-rich-electric-blue" type="submit">Submit</button></form></div></div></div></div><!-- bloc-13 END --><!-- bloc-14 --><div class="bloc bgc-dark-jungle-green bloc-tile-4 d-bloc" id="bloc-14"><div class="container bloc-lg"><div class="row"><div class="col-sm-12"></div></div></div></div><!-- bloc-14 END --></div><!-- Bloc Group END --><!-- ScrollToTop Button --><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a><!-- ScrollToTop Button END--><!-- Footer - bloc-17 --><div class="bloc bloc-bg-texture texture-fabric bgc-dark-jungle-green d-bloc" id="bloc-17"><div class="container bloc-lg"><div class="row"><div class="col-sm-3"><h3 class="mg-md bloc-mob-center-text">About</h3><a href="our-people.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="contact-us.html" class="a-btn a-block bloc-mob-center-text">Contact us</a></div><div class="col-sm-3"><h3 class="mg-md bloc-mob-center-text">Apps coming soon to</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a></div><div class="col-sm-3"><h3 class="mg-md bloc-mob-center-text">Follow Us</h3><a href="https://twitter.com/iamsams" class="a-btn a-block bloc-mob-center-text" target="_blank">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a></div><div class="col-sm-3"><h3 class="mg-md bloc-mob-center-text">Company</h3><a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Privacy</a></div></div></div></div><!-- Footer - bloc-17 END --></div><!-- Main container END --> </body></html>
+<!doctype html>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta name="keywords" content="">
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" type="image/png" href="favicon.png">
+      <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="./style.css">
+      <link rel="stylesheet" type="text/css" href="./css/animate.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/feather.min.css">
+      <link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <script src="./js/jquery-2.1.0.min.js"></script><script src="./js/bootstrap.min.js"></script><script src="./js/blocs.min.js"></script><script src="./js/jqBootstrapValidation.js"></script><script src="./js/formHandler.js"></script><script src="./js/lazysizes.min.js" defer></script> 
+      <title>Contact-Us</title>
+      <!-- Google Analytics --> <!-- Google Analytics END --> 
+   </head>
+   <body>
+      <!-- Main container -->
+      <div class="page-container">
+         <!-- bloc-0 -->
+         <div class="bloc l-bloc bgc-dark-jungle-green" id="bloc-0">
+            <div class="container bloc-sm">
+               <nav class="navbar row">
+                  <div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way.</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                  <div class="collapse navbar-collapse navbar-1">
+                     <ul class="site-navigation nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="listings.html">Show Listings</a></li>
+                        <li><a href="needs.html">I Have a Need</a></li>
+                        <li><a href="log-out.html">Log Out</a></li>
+                     </ul>
+                  </div>
+               </nav>
+            </div>
+         </div>
+         <!-- bloc-0 END --><!-- Bloc Group -->
+         <div class='bloc-group'>
+            <!-- bloc-12 -->
+            <div class="bloc bgc-dark-jungle-green bloc-tile-4 d-bloc" id="bloc-12">
+               <div class="container bloc-lg">
+                  <div class="row">
+                     <div class="col-sm-12"></div>
+                  </div>
+               </div>
+            </div>
+            <!-- bloc-12 END --><!-- bloc-13 -->
+            <div class="bloc bgc-dark-jungle-green bloc-tile-2 d-bloc" id="bloc-13">
+               <div class="container bloc-lg">
+                  <div class="row">
+                     <div class="col-sm-12">
+                        <form id="form_4" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+                           <div class="form-group"><label>Name</label><input id="name4" class="form-control" required /></div>
+                           <div class="form-group"><label>Email</label><input id="email4" class="form-control" type="email" required /></div>
+                           <div class="form-group"><label>Message</label><textarea id="message4" class="form-control" rows="4" cols="50" required></textarea></div>
+                           <button class="bloc-button btn btn-lg pull-right btn-rich-electric-blue" type="submit">Submit</button>
+                        </form>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <!-- bloc-13 END --><!-- bloc-14 -->
+            <div class="bloc bgc-dark-jungle-green bloc-tile-4 d-bloc" id="bloc-14">
+               <div class="container bloc-lg">
+                  <div class="row">
+                     <div class="col-sm-12"></div>
+                  </div>
+               </div>
+            </div>
+            <!-- bloc-14 END -->
+         </div>
+         <!-- Bloc Group END --><!-- ScrollToTop Button --><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a><!-- ScrollToTop Button END--><!-- Footer - bloc-17 -->
+         <div class="bloc bloc-bg-texture texture-fabric bgc-dark-jungle-green d-bloc" id="bloc-17">
+            <div class="container bloc-lg">
+               <div class="row">
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">About</h3>
+                     <a href="our-people.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="contact-us.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Apps coming soon to</h3>
+                     <a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Follow Us</h3>
+                     <a href="https://twitter.com/iamsams" class="a-btn a-block bloc-mob-center-text" target="_blank">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Company</h3>
+                     <a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- Footer - bloc-17 END -->
+      </div>
+      <!-- Main container END --> 
+   </body>
+</html>
